<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >


<EditText
        android:id="@+id/setting_nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    android:layout_marginTop="45dp"

    />

    <Button
        android:id="@+id/settings_nickname_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_nameET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/ChangeNick"

        />

    <Switch
        android:id="@+id/setting_effects_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_below="@id/settings_nickname_btn"
        android:layout_marginTop="25dp"
        android:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_nickname_btn"
        android:layout_marginTop="25dp"
        android:text="@string/Effects"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <Switch
        android:id="@+id/setting_music_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_below="@id/setting_effects_switch"
        android:layout_marginTop="25sp"
        android:checked="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_effects_switch"
        android:layout_marginTop="25sp"
        android:text="@string/Music"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/setting_userInfo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_music_switch"
        android:layout_marginTop="45sp"
        android:text="@string/User_Info"
        android:textSize="25sp"
        android:textColor="#e7e7e7"/>

    <TextView
        android:id="@+id/setting_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_userInfo_tv"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/setting_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_email_tv"
        android:layout_marginTop="5dp"
        android:text="@string/username"
         android:textSize="20sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/setting_highscore_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_username_tv"
        android:text="@string/CurrentHighScore"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="#000000"
        />


</RelativeLayout>