<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"

    >


    <TextView
        android:id="@+id/mainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#e4e4e4"
        android:layout_marginTop="40dp"
        android:background="@drawable/main_text_frame"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/welcomeText"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/play_btn"
        style="@style/mainButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/playText"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        />
    <Button
        android:id="@+id/settings_btn"
        style="@style/mainButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/settings"
        android:textStyle="bold|italic"
        />

    <Button
        android:id="@+id/leaderboard_btn"
        style="@style/mainButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/leaderboard"
        android:textStyle="bold|italic"
        />

    <Button
        android:id="@+id/practice_btn"
        style="@style/mainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderboard_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/practiceeMode"
        android:textStyle="bold|italic"
        />














</RelativeLayout>
